--- a/package.json
+++ b/package.json
@@ -1,7 +1,12 @@
 {
+    "scripts": {
+        "start": "npx nodemon server.js"
+    },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.8",
         "daisyui": "4.4.19",
+        "express": "^4.18.3",
+        "nodemon": "^3.1.0",
         "prettier": "^3.2.4",
         "prettier-plugin-tailwindcss": "^0.5.11",
         "tailwindcss": "^3.3.6"
